(fix) map viewer